--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     }
 
     body {
-      background: url('images/background-image.png') no-repeat center center/cover;
+      background: url('background-image.png') no-repeat center center/cover;
       color: white;
     }
 
